added issue tracker page

--- a/app/views/navbar.scala.html
+++ b/app/views/navbar.scala.html
@@ -110,6 +110,8 @@
 
                 @listItem(routes.DocumentationController.intro(), webContext.msg("docs.menu"))
 
+                @listItem(routes.AppController.issues(), webContext.msg("issues.menu"))
+
                 @listItem(routes.AppController.contact(), webContext.msg("contact.menu"), Some(1))
 
                 <li>
