--- a/app/views/filter/conditionPanel.scala.html
+++ b/app/views/filter/conditionPanel.scala.html
@@ -1,5 +1,6 @@
 @import org.ada.server.models.Filter
 @import org.incal.core.FilterCondition
+@import org.ada.web.util.shorten
 
 @(
     filter: Option[Filter],
@@ -16,7 +17,7 @@
     valueOrLabel match {
         case None => "undefined"
         case Some(s) if s.isEmpty => "undefined"
-        case Some(s) => s
+        case Some(s) => shorten(s, 80)
     }
 }
 
