Help modal added

--- a/app/views/dataview/elements.scala.html
+++ b/app/views/dataview/elements.scala.html
@@ -4,6 +4,7 @@
 @import views.html.table.dynamicTableJsImport
 @import views.html.dataview.{filterOrIdTable, widgetSpecTable}
 @import views.html.dataset.dynamicFieldTable
+@import views.html.elements.help
 @import org.ada.web.controllers.dataset.{DataSetWebContext, FilterRouter}
 @import reactivemongo.bson.BSONObjectID
 @import org.ada.web.controllers.dataset.DataSetWebContext._
