--- a/app/views/filter/conditionPanel.scala.html
+++ b/app/views/filter/conditionPanel.scala.html
@@ -7,7 +7,7 @@
 )
 
 <div id="conditionPanel" class="filter-part">
-    <span class="filter-part" style="padding-top: 5px">@filterLabel: @filter.get.name.getOrElse("")</span>
+    <span class="filter-part" style="padding-top: 5px">@filterLabel: @filter.map(_.name.getOrElse(""))</span>
     @filter.map(_.conditions).getOrElse(Nil).zipWithIndex.map { case (condition, index) =>
     <div id="condition-full@index" class="filter-part condition-full">
         <span class="condition">
