--- a/app/views/dataview/widgetSpecTable.scala.html
+++ b/app/views/dataview/widgetSpecTable.scala.html
@@ -609,8 +609,10 @@
 
      function setWidgetRowClickable(row) {
          row.css('cursor', 'pointer');
-         row.dblclick(function (event) {
-            showEditModal($(this))
+         row.click(function (event) {
+           if (event.target === this || [...this.children].includes(event.target)) {
+               showEditModal($(this))
+           }
          });
      }
 
