filters now have normal font weight

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -258,6 +258,10 @@ tr.clickable-row:hover {
     margin-left: 10px;
 }
 
+.filter-label {
+    font-weight: normal;
+}
+
 /*.row.vertical-divider {*/
     /*overflow: hidden;*/
 /*}*/
