--- a/app/views/filter/conditionPanel.scala.html
+++ b/app/views/filter/conditionPanel.scala.html
@@ -11,9 +11,9 @@
     @filter.map(_.conditions).getOrElse(Nil).zipWithIndex.map { case (condition, index) =>
     <div id="condition-full@index" class="filter-part condition-full">
         <span class="condition">
-            <span class="label label-primary" id="fieldLabel">@condition.fieldLabelOrElseName</span>
-            <span id="conditionType"><b>@conditionTypeToReadableOperator(condition.conditionType)</b></span>
-            <span class="label label-primary" id="value">@valueOrUndefined(condition, trim = true)</span>
+            <span class="filter-label label label-primary" id="fieldLabel">@condition.fieldLabelOrElseName</span>
+            <span id="filter-label conditionType"><b>@conditionTypeToReadableOperator(condition.conditionType)</b></span>
+            <span class="filter-label label label-primary" id="value">@valueOrUndefined(condition, trim = true)</span>
     </span>
         <span class="condition-buttons" style="display: none; padding-left: 5px">
             <button type="button" class="btn btn-sm btn-default editConditionButton">
