--- a/app/views/filter/conditionPanel.scala.html
+++ b/app/views/filter/conditionPanel.scala.html
@@ -7,7 +7,10 @@
 )
 
 <div id="conditionPanel" class="filter-part">
-    <span class="filter-part" style="padding-top: 5px">@filterLabel: @filter.map(_.name.getOrElse(""))</span>
+    <div class="filter-name-container">
+        <span >@filterLabel:</span>
+        <span class="filter-name">@filter.map(_.name.getOrElse(""))</span>
+    </div>
     @filter.map(_.conditions).getOrElse(Nil).zipWithIndex.map { case (condition, index) =>
     <div id="condition-full@index" class="filter-part condition-full">
         <span class="condition">
