--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -422,7 +422,8 @@ a.carousel-control.right{
 
 #conditionPanel {
     display: flex;
-    overflow: scroll;
+    overflow-x: auto;
+    width: auto;
 }
 
 .condition {
