--- a/app/views/category/categorySelectionModal.scala.html
+++ b/app/views/category/categorySelectionModal.scala.html
@@ -34,7 +34,7 @@
             var typeaheadData = data.map( function(item, index) {
                 return {name: item._id.$oid, label: item.name};
             });
-            populateFieldTypeahed(
+            populateFieldTypeahead(
                 $('#categoryTypeahead'),
                 $('#categoryId'),
                 typeaheadData,
