--- a/app/views/dataset/heatmap.scala.html
+++ b/app/views/dataset/heatmap.scala.html
@@ -64,8 +64,8 @@
 
             $('#inputDiv #valueFieldTypeahead').keypress(function (e) {
                 if (e.which == 13) {
-                    var valueFieldTypeahedVal = $('#inputDiv #valueFieldTypeahead').val();
-                    if (!valueFieldTypeahedVal)
+                    var valueFieldTypeaheadVal = $('#inputDiv #valueFieldTypeahead').val();
+                    if (!valueFieldTypeaheadVal)
                         $('#inputDiv #valueFieldName').val("")
 
                     calcHeatmap();
