--- a/app/views/dataview/widgetSpecTable.scala.html
+++ b/app/views/dataview/widgetSpecTable.scala.html
@@ -587,8 +587,8 @@
      });
 
      handleModalButtonEnterPressed("edit_widgetSpecModal", "editWidgetSpecSubmitButton", function() {
-         var groupFieldTypeahedVal = $('#edit_widgetSpecModal #groupFieldNameTypeahead').val();
-         if (!groupFieldTypeahedVal)
+         var groupFieldTypeaheadVal = $('#edit_widgetSpecModal #groupFieldNameTypeahead').val();
+         if (!groupFieldTypeaheadVal)
              $('#edit_widgetSpecModal #groupFieldName').val("")
 
          var subFilterTypeaheadVal = $('#edit_widgetSpecModal #subFilterTypeahead').val();
