--- a/app/views/dataset/cluster.scala.html
+++ b/app/views/dataset/cluster.scala.html
@@ -38,7 +38,7 @@
                     var typeaheadData = data.map(function (item, index) {
                         return {name: item._id.$oid, label: item.name};
                     });
-                    populateFieldTypeahed(
+                    populateFieldTypeahead(
                         $('#mlModelTypeahead'),
                         $('#mlModelId'),
                         typeaheadData,
