--- a/app/views/dataview/activateTypeahead.scala.html
+++ b/app/views/dataview/activateTypeahead.scala.html
@@ -18,46 +18,46 @@
         $.ajax({
             url: '@Html(dataSetRouter.allFieldNamesAndLabels.url)',
             success: function (data) {
-                populateFieldTypeaheads(
-                    [
+                populateFieldTypeaheads({
+                    typeaheadElements: [
                         $('#add_tableColumnNameModal #fieldTypeahead'),
                         $('#add_widgetSpecModal #fieldNameTypeahead'),
                         $('#edit_widgetSpecModal #fieldNameTypeahead')
                     ],
-                    [
+                    fieldNameElements: [
                         $('#add_tableColumnNameModal #fieldName'),
                         $('#add_widgetSpecModal #fieldName'),
                         $('#edit_widgetSpecModal #fieldName')
                     ],
-                    data,
+                    fieldNameAndLabels: data,
                     showOption
-                );
+                });
             }
         });
 
         $.ajax({
             url: '@Html(dataSetRouter.fieldNamesAndLabels(Seq(FieldTypeId.Enum, FieldTypeId.String, FieldTypeId.Boolean, FieldTypeId.Json)).url)',
             success: function (data) {
-                populateFieldTypeaheads(
-                    [
+                populateFieldTypeaheads({
+                    typeaheadElements: [
                         $('#add_widgetSpecModal #groupFieldNameTypeahead'),
                         $('#edit_widgetSpecModal #groupFieldNameTypeahead')
                     ],
-                    [
+                    fieldNameElements: [
                         $('#add_widgetSpecModal #groupFieldName'),
                         $('#edit_widgetSpecModal #groupFieldName')
                     ],
-                    data,
+                    fieldNameAndLabels: data,
                     showOption
-                );
+                });
             }
         });
 
         $.ajax({
             url: '@Html(dataSetRouter.fieldNamesAndLabels(Seq(FieldTypeId.Double, FieldTypeId.Integer, FieldTypeId.Date)).url)',
             success: function (data) {
-                populateFieldTypeaheads(
-                    [
+                populateFieldTypeaheads({
+                    typeaheadElements: [
                         $('#add_widgetSpecModal #xFieldNameTypeahead'),
                         $('#add_widgetSpecModal #yFieldNameTypeahead'),
                         $('#add_widgetSpecModal #valueFieldNameTypeahead'),
@@ -65,7 +65,7 @@
                         $('#edit_widgetSpecModal #yFieldNameTypeahead'),
                         $('#edit_widgetSpecModal #valueFieldNameTypeahead')
                     ],
-                    [
+                    fieldNameElements: [
                         $('#add_widgetSpecModal #xFieldName'),
                         $('#add_widgetSpecModal #yFieldName'),
                         $('#add_widgetSpecModal #valueFieldName'),
@@ -73,9 +73,9 @@
                         $('#edit_widgetSpecModal #yFieldName'),
                         $('#edit_widgetSpecModal #valueFieldName')
                     ],
-                    data,
+                    fieldNameAndLabels: data,
                     showOption
-                );
+                });
             }
         });
 
@@ -85,12 +85,12 @@
                 var typeaheadData = data.map(function (item, index) {
                     return {name: item._id.$oid, label: item.name};
                 });
-                populateFieldTypeahead(
-                    $('#subFilterTypeahead'),
-                    $('#subFilterId'),
-                    typeaheadData,
-                    @FilterShowFieldStyle.LabelsOnly.id
-                );
+                populateFieldTypeahead({
+                    typeaheadElement: $('#subFilterTypeahead'),
+                    fieldNameElement: $('#subFilterId'),
+                    fieldNameAndLabels: typeaheadData,
+                    showOption: @FilterShowFieldStyle.LabelsOnly.id
+                });
             }
         });
     });
