setting fields typeahead to minLength 2

--- a/app/views/dataset/widgetsScreen.scala.html
+++ b/app/views/dataset/widgetsScreen.scala.html
@@ -119,7 +119,8 @@
                 fieldNameElement: nameElement,
                 url,
                 showOption: @setting.filterShowFieldStyle.getOrElse(FilterShowFieldStyle.NamesAndLabels).id,
-                postFunction: focusFun
+                postFunction: focusFun,
+                minLength: 2
             })
         }
 
