--- a/app/views/dataview/activateTypeahead.scala.html
+++ b/app/views/dataview/activateTypeahead.scala.html
@@ -30,7 +30,8 @@
                         $('#edit_widgetSpecModal #fieldName')
                     ],
                     fieldNameAndLabels: data,
-                    showOption
+                    showOption,
+                    minLength: 2
                 });
             }
         });
@@ -48,7 +49,8 @@
                         $('#edit_widgetSpecModal #groupFieldName')
                     ],
                     fieldNameAndLabels: data,
-                    showOption
+                    showOption,
+                    minLength: 2
                 });
             }
         });
@@ -74,7 +76,8 @@
                         $('#edit_widgetSpecModal #valueFieldName')
                     ],
                     fieldNameAndLabels: data,
-                    showOption
+                    showOption,
+                    minLength: 2
                 });
             }
         });
